fixing hidden scrollbar

--- a/assets/styles/all_styles.css
+++ b/assets/styles/all_styles.css
@@ -56,7 +56,6 @@ body {
   overflow-x: hidden; }
 
 body {
-  height: 100vh;
   margin: 0; }
 
 h1, h2, h3, h4, h5, h6 {
